--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/Global.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
